# sentinel_swarm_pro

./: docker-compose.yml  send_sample.py  test-compose.yml
backend/: Dockerfile  actions.py  agent.py  events.db  main.py  models.py  pyproject.toml  requirements.txt  stream_consumer.py  tinyvit_download.py
docs/: README.md
docs/sample_logs/: sample1.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: EventTable.vue
frontend/src/stores/: eventStore.ts
honeypot/: Dockerfile
infra/: .env.example  devcontainer.json  seed_kafka.sh
infra/helm/: Chart.yaml  values.yaml
tests/: test_agent_honeypot.py  test_isolation.py
